loade all services data

--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-DB_USER=ReviewUser
-DB_PASSWORD=j2ImNRmz1EjwsVL
+DB_USER=PhotographyUser
+DB_PASSWORD=08w7fvGApRE4qvtn
+
+# DB_USER=ReviewUser
+# DB_PASSWORD=j2ImNRmz1EjwsVL
+
+# genius car
+# DB_USER =giniusCarDb
+# DB_PASSWORD =hhgw5K5zNLB6MwtR
